tests/neg-custom-args/captures/outer-var.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:11:8 -------------------------------------
11 |    x = q           // error
   |        ^
   |        Found:    box () ->{q} Unit
   |        Required: box () ->{p, q²} Unit
   |
   |        where:    q  is a parameter in method inner
   |                  q² is a parameter in method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:12:9 -------------------------------------
12 |    x = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    Proc
   |         Required: box () ->{p, q} Unit
   |
   |         Note that () => Unit cannot be box-converted to box () ->{p, q} Unit
   |         since at least one of their capture sets contains the root capability `cap`
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:13:9 -------------------------------------
13 |    y = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    Proc
   |         Required: box () => Unit
   |
   |         Note that () => Unit cannot be box-converted to box () => Unit
   |         since at least one of their capture sets contains the root capability `cap`
   |
   | longer explanation available when compiling with `-explain`
